// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse Component Does not render LeftIcon when prop is undefined 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 "
>
  <div
    class="w-full"
  >
    My Collapse
  </div>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-chevron-down "
      data-icon="chevron-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Collapse Component Renders a collapse component 1`] = `
<div>
  <div
    class="w-100 collapse "
    tabindex="0"
  >
    <div
      class="collapse-title cursor-pointer flex items-center justify-center px-4 "
    >
      <div
        class="w-full"
      >
        My Collapse
      </div>
      <div
        class="items-end transition ease-in-out -rotate-90"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-chevron-down "
          data-icon="chevron-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0"
      style="height: 0px;"
    >
      <p
        class="test-element"
      >
        Hi everyone
      </p>
    </div>
  </div>
</div>
`;

exports[`Collapse Component Renders an expanded collapse component when defaultExpand is true 1`] = `
<div>
  <div
    class="w-100 collapse "
    tabindex="0"
  >
    <div
      class="collapse-title cursor-pointer flex items-center justify-center px-4 "
    >
      <div
        class="w-full"
      >
        My Collapse
      </div>
      <div
        class="items-end transition ease-in-out "
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-chevron-down "
          data-icon="chevron-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden "
      style="height: 30px;"
    >
      <p
        class="test-element"
      >
        Hi everyone
      </p>
    </div>
  </div>
</div>
`;

exports[`Collapse Component Respects className prop 1`] = `
<div
  class="w-100 collapse my-class-name"
  tabindex="0"
>
  <div
    class="collapse-title cursor-pointer flex items-center justify-center px-4 "
  >
    <div
      class="w-full"
    >
      My Collapse
    </div>
    <div
      class="items-end transition ease-in-out -rotate-90"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-chevron-down "
        data-icon="chevron-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0"
    style="height: 0px;"
  >
    <p
      class="test-element"
    >
      Hi everyone
    </p>
  </div>
</div>
`;

exports[`Collapse Component Respects headerClasses prop 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 some-header-class another-header-class"
>
  <div
    class="w-full"
  >
    My Collapse
  </div>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-chevron-down "
      data-icon="chevron-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Collapse Component Respects leftIcon prop 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 "
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-house mr-2"
    data-icon="house"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 576 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"
      fill="currentColor"
    />
  </svg>
  <div
    class="w-full"
  >
    My Collapse
  </div>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-chevron-down "
      data-icon="chevron-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Collapse Component Respects leftIconClasses arg 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 "
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-house some-icon-class"
    data-icon="house"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 576 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"
      fill="currentColor"
    />
  </svg>
  <div
    class="w-full"
  >
    My Collapse
  </div>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-chevron-down "
      data-icon="chevron-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Collapse Component Respects rightIconClasses arg 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 "
>
  <div
    class="w-full"
  >
    My Collapse
  </div>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-chevron-down some-icon-class"
      data-icon="chevron-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;
